trunk/Archive2/92/765cc8cb900ddf/output
+ clang++ -std=c++11 -O2 -Wall -Wno-unused-variable -pthread main.cpp
+ ./a.out
+ g++-4.8 -std=c++11 -O2 -Wall -Wno-unused-variable -pthread main.cpp
main.cpp:6:27: error: 'constexpr const<anonymous enum> foo<int>::value', declared using anonymous type, is used but never defined [-fpermissive]
     static constexpr auto value = a;
                           ^
